# vtu_result_show

./: main.py  pyproject.toml  requirements.txt
static/: script.js  style.css
templates/: index.html
